pertemuan 4 PR-fix 1

--- a/sidebar.html
+++ b/sidebar.html
@@ -19,6 +19,10 @@
     <body>
         <div class="wrapper">
             <nav id="sidebar">
+                <div class="sidebar-toggle">
+                        <i class="fas fa-angle-double-left"></i> 
+                </div>
+                <br>
                 <div class="sidebar-header">
                     <img src="Frame 40792-1.png" alt="Admin Profile">
                     <div class="admin-info">
